API-9045/mobile styling issues (#819)
* Fixed extra spacing issue in homepage. Reduced icon size.

* Fixed aligment with the upper content.

* Fixed aligment of content, updated snapshots.

* Updated snapshot

* Fixed API-9046 API list width size,

--- a/src/containers/Home.scss
+++ b/src/containers/Home.scss
@@ -23,3 +23,7 @@ a.va-home-button {
 div.va-column-content-text {
   position: relative;
 }
+
+.flex-basis-32 {
+  flex-basis: 32%;
+}
